# safe_arith_policies

./: Cargo.toml  README.md  rustfmt.toml
src/: error.rs  lib.rs  policy.rs
src/consts/msg/: en_us.rs
src/error/: io.rs
src/error/io/: wrapped_std_io.rs
src/policy/: checked.rs  overflowing.rs  panicking.rs  saturating.rs  wrapping.rs
src/policy/panicking/: op.rs
