[package]
authors = ["Brad Gibson <b2b@humanenginuity.com>"]
categories = []
description = "<describe crate here>"
edition = "2021"
keywords = []
license = "MIT OR Apache-2.0"
name = "safe_arithmetic"
readme = "README.md"
repository = "https://github.com/u007d/safe_arithmetic"
version = "0.1.0"

[dependencies]
thiserror = "*"

[dev-dependencies]
assert2 = "*"

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
